# items

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml  pytest.ini  tox.ini  uv.lock.license
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  zizmor.yml
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  make.bat
src/items/: __init__.py  api.py  cli.py  db.py
tests/: conftest.py  test_add.py  test_classes.py  test_cli.py  test_compare.py  test_config.py  test_count.py  test_db.py  test_finish.py  test_finish2.py  test_fixtures.py  test_helper.py  test_item.py  test_item_fail.py  test_items.py  test_output.py  test_start.py  test_version.py  test_xfail.py
tests/api/: __init__.py  test_add.py  test_config.py  test_count.py  test_delete.py  test_delete_all.py  test_exceptions.py  test_finish.py  test_item.py  test_item_id.py  test_list.py  test_list_edge_cases.py  test_start.py  test_update.py  test_version.py
tests/cli/: __init__.py  conftest.py  test_add.py  test_config.py  test_count.py  test_delete.py  test_errors.py  test_finish.py  test_help.py  test_list.py  test_start.py  test_update.py  test_version.py
