# SPDX-FileCopyrightText: 2023 Veit Schiele
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "items"
dynamic = ["version"]
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = ""
readme = "README.rst"
License-Expression = "BSD-3-Clause"
License-Files = [ "LICENSES/BSD-3-Clause.txt" ]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "tinydb",
    "typer",
]

[dependency-groups]
tests = [
    "coverage[toml]",
    "faker",
    "pytest>=6.0",
    "pytest-cov",
]
docs = [
    "interrogate",
    "furo",
    "matplotlib",
    "sphinx-copybutton",
    "sphinx_inline_tabs",
    "sphinxcontrib.napoleon",
    "sphinxext-opengraph",
]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    "pre-commit",
    "reuse",
    "tox-uv>=1.16.0",
    "watchgha",
]

[project.urls]
Documentation = "https://items.cusy.io/"
GitHub = "https://github.com/veit/items"
Mastodon = "https://mastodon.social/@veit"

[tool.hatch.version]
path = "src/items/__init__.py"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
    ]
testpaths = "tests"
markers = [
    "exception: Only run expected exceptions",
    "finish: Only run finish tests",
    "smoke: Small subset of all tests",
    "num_items: Number of items to be pre-filled for the items_db fixture"
    ]

[tool.coverage.run]
branch = true
parallel = true
source = ["items", "tests"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-property-decorators = false
fail-under = 100
exclude = ["docs"]
verbose = 0
omit-covered-files = false
quiet = false
whitelist-regex = []
ignore-regex = []
color = true

[tool.ruff]
src = ["src", "tests"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A",       # Shaddowing is fine
    "ANN",     # We don’t use type annotations
    "B008",    # Function call `typer.Option` in argument defaults is fine
    "COM812",  # May cause conflicts when used with the formatter
    "D203",    # It’s incompatible to D211
    "D213",    # Ditto
    "INP001",  # docs/conf.py is a Python file outside of packages
    "RUF001",  # I love typographic symbols
    "RUF003",  # Ditto
    "T201",    # print is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",  # With monkeypatch, seemingly unused arguments are used
    "S101",    # assert in tests is fine
    "PLR2004", # Numbers are sometimes fine in tests
    "W291",    # To test the output on the CLI, trailing spaces are needed
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[project.scripts]
items = "items:app"
