# SPDX-FileCopyrightText: 2023 Veit Schiele
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.27" ]

[project]
name = "items"
description = ""
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSES/BSD-3-Clause.txt" ]
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "rich",
  "tinydb",
  "typer",
]
urls.Documentation = "https://items.cusy.io/"
urls.GitHub = "https://github.com/veit/items"
urls.Mastodon = "https://mastodon.social/@veit"
scripts.items = "items:app"

[dependency-groups]
dev = [
  "pre-commit",
  "reuse",
  "tox-uv>=1.16",
  "watchgha",
  { include-group = "docs" },
  { include-group = "tests" },
]
docs = [
  "furo",
  "interrogate",
  "matplotlib",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinxcontrib-napoleon",
  "sphinxext-opengraph",
]
tests = [
  "coverage[toml]",
  "faker",
  "pytest>=6",
  "pytest-cov",
]

[tool.hatch]
version.path = "src/items/__init__.py"

[tool.ruff]
line-length = 79
src = [ "src", "tests" ]
lint.select = [ "ALL" ]
lint.ignore = [
  "A",      # Shaddowing is fine
  "ANN",    # We don’t use type annotations
  "B008",   # Function call `typer.Option` in argument defaults is fine
  "COM812", # May cause conflicts when used with the formatter
  "D203",   # It’s incompatible to D211
  "D213",   # Ditto
  "INP001", # docs/conf.py is a Python file outside of packages
  "RUF001", # I love typographic symbols
  "RUF003", # Ditto
  "T201",   # print is fine
]
lint.per-file-ignores."tests/*" = [
  "ARG001",  # With monkeypatch, seemingly unused arguments are used
  "PLR2004", # Numbers are sometimes fine in tests
  "S101",    # assert in tests is fine
  "W291",    # To test the output on the CLI, trailing spaces are needed
]
lint.isort.lines-after-imports = 2
lint.isort.lines-between-types = 1

[tool.pytest]
ini_options.addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
ini_options.testpaths = "tests"
ini_options.markers = [
  "exception: Only run expected exceptions",
  "finish: Only run finish tests",
  "smoke: Small subset of all tests",
  "num_items: Number of items to be pre-filled for the items_db fixture",
]

[tool.coverage]
paths.source = [ "src", ".tox/py*/**/site-packages" ]
report.show_missing = true
report.skip_covered = true
report.exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
]
run.branch = true
run.parallel = true
run.source = [ "items", "tests" ]

[tool.tox]
requires = [ "tox>=4" ]
env_list = [
  "pre-commit",
  "docs",
  "py3{10-14}",
  "py{13-14}t",
  "coverage-report",
]
isolated_build_env = "True"
skip_missing_interpreters = true
env.coverage-report.description = "Report coverage over all test runs."
env.coverage-report.deps = [ "coverage[toml]" ]
env.coverage-report.skip_install = true
env.coverage-report.commands = [
  [ "coverage", "combine" ],
  [ "coverage", "report" ],
]
# Keep base_python in sync with ci.yml and .readthedocs.yaml.
env.docs.base_python = [ "py313" ]
env.docs.deps = [ "interrogate" ]
env.docs.dependency_groups = [ "docs" ]
env.docs.commands = [
  [
    "sphinx-build",
    "-n",
    "-T",
    "-W",
    "-b",
    "html",
    "-d",
    "{envtmpdir}/doctrees",
    "docs",
    "docs/_build/html"
  ],
  [
    "sphinx-build",
    "-n",
    "-T",
    "-W",
    "-b",
    "doctest",
    "-d",
    "{envtmpdir}/doctrees",
    "docs",
    "docs/_build/html"
  ],
  [ "interrogate", "--quiet", "--fail-under", "100", "src", "tests" ]
]
env.docs-linkcheck.base_python = [ "{[tool.tox.env.docs]base_python}" ]
env.docs-linkcheck.dependency_groups = [ "docs" ]
env.docs-linkcheck.commands = [
  [ "sphinx-build", "-W", "-b", "linkcheck", "-d", "{envtmpdir}/doctrees", "docs", "docs/_build/html" ]
]
env.pre-commit.description = "Run all pre-commit hooks."
env.pre-commit.deps = [
  "pre-commit",
]
env.pre-commit.skip_install = true
env.pre-commit.commands = [
  [ "pre-commit", "run", "--all-files" ],
]
env_run_base.dependency_groups = [ "tests" ]
env_run_base.deps = [ "coverage[toml]" ]
env_run_base.commands = [
  [ "python", "--version", "--version" ],
  [ "coverage", "run", "-m", "pytest", "{posargs}" ],
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-property-decorators = false
fail-under = 100
exclude = [ "docs" ]
verbose = 0
omit-covered-files = false
quiet = false
whitelist-regex = []
ignore-regex = []
color = true
